[package]
name = "waylens"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "A practical Wayland session debugging and diagnostics tool for Linux"
license = "MIT"
repository = "https://github.com/sarayu0172-s/waylens"
readme = "README.md"
keywords = ["wayland", "linux", "debugging", "tui", "diagnostics"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }

[profile.release]
strip = true
lto = true
opt-level = 3
